--- a/r2/r2/templates/password.html
+++ b/r2/r2/templates/password.html
@@ -1,4 +1,4 @@
-## "The contents of this file are subject to the Common Public Attribution
+## The contents of this file are subject to the Common Public Attribution
 ## License Version 1.0. (the "License"); you may not use this file except in
 ## compliance with the License. You may obtain a copy of the License at
 ## http://code.reddit.com/LICENSE. The License is based on the Mozilla Public
@@ -21,27 +21,28 @@
 ################################################################################
 
 <%namespace file="utils.html" import="error_field, success_field"/>
-<h2>${_("what's my password?")}</h2>
-<p>
-  ${_("enter your user name below to receive your login information")}
-</p>
-
 ${success_field(_('you should receive an email shortly'),
                 successful=thing.success, hide='passform')}
 
-<form id="passform" action="/post/password" method="post" class="content"
+<form id="passform" action="/api/password" method="post"
+      class="content pretty-form medium-text"
       onsubmit="return post_form(this, 'password');">
+  <h1>${_("what's my password?")}</h1>
+  <p> ${_("enter your user name below to receive your login information")}</p>
   <table>
     <tr>
-      <td id="uname_password">
-        ${_("username")}:
+      <td>
+        <label for="name">${_("username")}</label>
       </td>
-      <td id="name_password">
+      <td>
         <input type="text" id="name" name="name" />
       </td>
       <td>
-        <input id="submit_password" type="submit" 
-               class="btn" value="${_('email me')}" />
+        <button type="submit" class="btn">${_("email me")}</button>
+      </td>
+    </tr>
+    <tr>
+     <td colspan="2">
         <span class="error" id="status"></span>
         ${error_field("USER_DOESNT_EXIST", "span")}
         ${error_field("NO_EMAIL_FOR_USER", "span")}
