--- a/r2/r2/templates/resetpassword.html
+++ b/r2/r2/templates/resetpassword.html
@@ -1,4 +1,4 @@
-## "The contents of this file are subject to the Common Public Attribution
+## The contents of this file are subject to the Common Public Attribution
 ## License Version 1.0. (the "License"); you may not use this file except in
 ## compliance with the License. You may obtain a copy of the License at
 ## http://code.reddit.com/LICENSE. The License is based on the Mozilla Public
@@ -25,17 +25,26 @@
 %if thing.done:
 <p class="error">your password has been reset and you've been logged in.  Go use the site!</p>
 %else:
-<h2>reset your password</h2>
-
 ${error_field("EXPIRED", 'p')}
 
-<form id="chpass" method="post" action="/post/resetpassword" 
-   onsubmit="return post_form(this,'resetpassword')">
+<form id="chpass" method="post" action="/api/resetpassword" 
+      onsubmit="return post_form(this,'resetpassword')"
+      class="pretty-form">
+  <h1>reset your password</h1>
   <input type="hidden" name="key" value="${thing.key}"/>
   <table>
     <tr>
       <td>
-        ${_('new password')}:
+        ${_("username")}
+      </td>
+      <td>
+        <input class="logtxt" name="name" 
+               id="name" type="text"/>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        ${_("new password")}
       </td>
       <td>
         <input class="logtxt" name="passwd" 
@@ -47,7 +56,7 @@ ${error_field("EXPIRED", 'p')}
     </tr>
     <tr>
       <td>
-        ${_('verify password')}:
+        ${_("verify password")}
       </td>
       <td>
         <input class="logtxt" name="passwd2" 
