Patch from chromakode to add <a id=...> to links to authors and subreddits on listings for easier DOM parsing of these values
http://code.reddit.com/ticket/53

--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -72,7 +72,7 @@
 </%def>
 
 <%def name="subreddit()" buffered="True">
-  <a href="${thing.subreddit.path}" class="hover">
+  <a id="subreddit_${thing._fullname}" href="${thing.subreddit.path}" class="hover">
     ${thing.subreddit.name}
   </a>
   <script type="text/javascript">
