--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -17,7 +17,7 @@
 ## the Original Code is CondeNet, Inc.
 ## 
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
-## CondeNet, Inc. All Rights Reserved.
+## CondeNet, Inc. All Rights Reserved."
 ################################################################################
 
 <%namespace file="utils.html" import="language_tool, language_checkboxes"/>
@@ -34,11 +34,20 @@
 <%def name="link_options()">
   <select name="numsites" style="margin: 0 .5em 0 .5em">
         %for x in [10, 25, 50, 100]:
-        <option ${x == c.user.pref_numsites and "selected='selected'" or ""}>${x}</option>
+        <option ${x == c.user.pref_numsites and "selected='selected'" or ""}>
+          ${x}
+        </option>
         %endfor
   </select>
 </%def>
 
+<%def name="media_radio(val, label)">
+  <input id="media_${val}" class="nomargin" 
+         type="radio"  value="${val}" name="media"
+         ${"checked='checked'" if c.user.pref_media == val else ''} /> 
+  <label for="media_${val}">${label}</label>
+  <br/>
+</%def>
 
 <%def name="num_input(s, name)">
   <input type="text" size="4" maxlength="4" 
@@ -54,8 +63,8 @@
 <input type="hidden" name="uh" value="${c.modhash}" />
 
 <table class="content preftable">
-  <tr class="prefrow">
-    <td class="prefleft">${_("interface language")}</td>
+  <tr>
+    <th>${_("interface language")}</th>
     <td class="prefright">
       ${language_tool(allow_blank = False, show_regions = True,
                       default_lang = c.user.pref_lang)}
@@ -63,23 +72,36 @@
         &#32;<a href="/feedback">${_("volunteer to translate")}</a></span>
     </td>
   </tr>
-  <tr class="prefrow">
-    <td class="prefleft">${_("content language")}</td>
+  <tr>
+    <th>${_("content language")}</th>
     <td class="prefright">
       ${language_checkboxes(default = c.user.pref_content_langs)}
     </td>
   </tr>
   %if c.user_is_loggedin:
-  <tr class="prefrow">
-    <td class="prefleft">${_("clicking options")}</td>
+  <tr>
+    <th>${_("clicking options")}</th>
     <td class="prefright">
       ${checkbox(_("display links with a reddit toolbar"), "frame")}
       <br/>
       ${checkbox(_("open links in a new window"), "newwindow")}
     </td>
   </tr>
-  <tr class="prefrow">
-    <td class="prefleft">${_("link options")}</td>
+  <tr>
+    <th>${_("media")}</th>
+    <td class="prefright">
+      %if not c.user.pref_compress:
+      ${media_radio("on", _("show thumbnails next to links"))}
+      ${media_radio("off", _("don't show thumbnails next to links"))}
+      ${media_radio("subreddit", _("show thumbnails based on that reddit's media preferences"))}
+      %else:
+      <p class="error">${_("to enable thumbnails, disable compressed link display")}</p>
+      <input type="hidden" name="media" value="${c.user.pref_media}"/>
+      %endif
+    </td>
+  </tr>
+  <tr>
+    <th>${_("link options")}</th>
     <td class="prefright">
       ${checkbox(_("show me new links on the front page"), "organic")}
       <br/>
@@ -108,8 +130,8 @@
       &#32;<span class="little gray">${_("(blank for none)")}</span>
     </td>
   </tr>
-  <tr class="prefrow">
-    <td class="prefleft">${_("comment options")}</td>
+  <tr>
+    <th>${_("comment options")}</th>
     <td class="prefright">
     <% 
        input = capture(num_input, c.user.pref_min_comment_score,
@@ -129,8 +151,8 @@
     </td>
   </tr>
   
-  <tr class="prefrow">
-    <td class="prefleft">${_("privacy options")}</td>
+  <tr>
+    <th>${_("privacy options")}</th>
     <td class="prefright">
       ${checkbox(_("make my votes public"), "public_votes")}
       <br/>
