cleared alt-text for thumbnails don't break when content-type isn't returned don't break on bad if-modified-since headers log failed image requests

--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -197,7 +197,7 @@
 <%def name="thumbnail()">
   %if thing.thumbnail:
   <%call expr="make_link('thumbnail', 'thumbnail')">
-    <img src="${thing.thumbnail}" alt="thumbnail for ${thing._fullname}"/>
+    <img src="${thing.thumbnail}" alt=""/>
   </%call>
   %endif
 </%def>
