--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -171,6 +171,11 @@
   ${parent.delete_or_report_buttons()}
   ${parent.buttons()}
   ${self.media_embed()}
+  %if c.user_is_loggedin:
+    <li id="share_li_${fullname}">
+      ${parent.simple_button("share", fullname, _("share"), "share")}
+    </li>
+  %endif
 </%def>
 
 
