--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -17,7 +17,7 @@
 ## the Original Code is CondeNet, Inc.
 ## 
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
-## CondeNet, Inc. All Rights Reserved.
+## CondeNet, Inc. All Rights Reserved."
 ################################################################################
 
 <%namespace file="utils.html" import="error_field, submit_form, plain_link, text_with_links"/>
