--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -45,6 +45,7 @@
   <a id="${name}_${thing._fullname}" 
      onmousedown="setClick(this, '${css_class}')"
      class="${css_class} ${ c.user_is_loggedin and 'loggedin' or ''} ${thing.clicked and 'click' or ''}" 
+     title="${thing.title}" 
      %if c.user.pref_frame:
        href="/goto?id=${thing._id36}"  
      %else:
@@ -147,6 +148,7 @@
   <li class="first">
   ${parent.comment_button("comment", fullname, com_label,
                           thing.num_comments, thing.permalink,
+                          title = "comments on " + thing.title,
                           newwindow = c.user.pref_newwindow)}
   </li>
   %if c.user_is_loggedin:
