--- a/r2/r2/templates/redditfooter.html
+++ b/r2/r2/templates/redditfooter.html
@@ -32,10 +32,10 @@
   ${thing.footer_nav().render()}
 
   <p class="wired">
-    <a href="http://wired.com">
+    <a rel="nofollow" href="http://wired.com">
       <img src="${static('wired_w.png')}" alt="wired" /></a>
-    <a href="http://wired.com">WIRED.com</a>-
-    <a href="http://howto.wired.com">WIRED How-To</a>
+    <a rel="nofollow" href="http://wired.com">WIRED.com</a>-
+    <a rel="nofollow" href="http://howto.wired.com">WIRED How-To</a>
   </p>
   <p class="bottommenu">
     ${text_with_links(_("Use of this site constitutes acceptance of our %(user_agreement)s and %(privacy_policy)s"), user_agreement= (_("User Agreement {Genitive}"), "http://reddit.com/help/useragreement"), privacy_policy = (_("Privacy Policy {Genitive}"), "http://reddit.com/help/privacypolicy"))}.  
