hide tracking pixel and add 403 to comment pages on private reddits

--- a/r2/r2/templates/redditfooter.html
+++ b/r2/r2/templates/redditfooter.html
@@ -44,7 +44,7 @@
     dict(year=2008)}
   </p>
  %if g.tracker_url:
-  <img alt="innocuous" src="${tracking.gen_url()}"/>
+  <img alt="" src="${tracking.gen_url()}"/>
  %endif
 </div>
 
