--- a/r2/r2/templates/optout.html
+++ b/r2/r2/templates/optout.html
@@ -19,28 +19,41 @@
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
 ## CondeNet, Inc. All Rights Reserved."
 ###############################################################################
-<div style="font-size:larger">
+<div class="opt-form">
 %if thing.leave:
-  <p> 
-    ${_("The address %(email)s will no longer recieve email from us.") % dict(email=thing.email)}
-  </p>
-  
   %if thing.sent:
-   <p>
+  <p> 
+    ${_("The address '%(email)s' will no longer receive email from us.") % dict(email=thing.email)}
+  </p>
+  <p>
      ${_("A confirmation email has been queued up and should be reaching you shortly.  It will be the last you hear of us.")}
    </p>
   %else:
    <p>
-     ${_("A confirmation email has already been queued up and/or sent.")}
+     ${_("Would you like the address %(email)s to no longer receive email from us?") % dict(email=thing.email)}
+     <form method="post" action="/post/optout">
+       <input type="hidden" name="x" value="${thing.msg_hash}" />
+       <input type="submit" name="accept" value="${_('yes')}" />
+     </form>
+     <form method="get" action="/">
+       <input type="submit" name="decline" value="${_('no')}" />
+     </form>
    </p>
   %endif
 %elif thing.sent:
   <p> 
-    ${_("The address %(email)s is once again fair game to receive email from us.  Welcome back.  You'll be receiving a confirmation email.") % dict(email=thing.email)}
+    ${_("'%(email)s' has been removed from our block list.") % dict(email=thing.email)}
   </p>
 %else:
-  <p> 
-    ${_("%(email)s has already been removed from our block list.") % dict(email=thing.email)}
+  <p>
+  ${_("Allow '%(email)s' to receive email from us?") % dict(email=thing.email)}
+  <form method="post" action="/post/optin">
+    <input type="hidden" name="x" value="${thing.msg_hash}" />
+    <input type="submit" name="accept" value="${_('yes')}" />
+  </form>
+  <form method="get" action="/">
+    <input type="submit" name="decline" value="${_('no')}" />
+  </form>
   </p>
 %endif
 </div>
