--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -1,4 +1,4 @@
-## "The contents of this file are subject to the Common Public Attribution
+## The contents of this file are subject to the Common Public Attribution
 ## License Version 1.0. (the "License"); you may not use this file except in
 ## compliance with the License. You may obtain a copy of the License at
 ## http://code.reddit.com/LICENSE. The License is based on the Mozilla Public
@@ -27,7 +27,7 @@
 ${success_field(_("your message has been delivered"), 
                 successful=thing.success)}
 
-<%call expr="submit_form(onsubmit='return post_form(this, \'compose\')',
+<%call expr="submit_form(onsubmit='return post_form(this, \'compose\', null, null, true)',
              method='post',
              action='/message/compose', _class='iform')">
   <table>
