--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -28,7 +28,7 @@
   <h1>${_("submit to %(site)s") % dict(site=c.site.name)}</h1>
 %endif
 
-<%call expr="submit_form(onsubmit='return post_form(this, \'submit\', linkstatus)', 
+<%call expr="submit_form(onsubmit='return post_form(this, \'submit\', linkstatus, null, true)', 
              action='/submit', _class='long-text content', _id='newlink')">
   %if not thing.subreddits:
     <input type="hidden" name="sr" value="${c.site.name}" />
